--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
-        android:text="Total Rooms : 0"
+        android:text=""
         android:textFontWeight="800"
         android:textSize="14dp"
         app:layout_constraintEnd_toEndOf="parent"
